# PFF

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  base.py  build_pitch_control.py  config.py  main.py  pff2spadl.py  pyproject.toml  requirements.txt
data_process/: PFF2SPADL.ipynb  tracking.py
notebooks/: explore.ipynb
pff/data_process/: base.py  tracking.py
pff/pitch_control/: cpitchcontrol.pyx  cyplayer.pyx  generaltasks.py  parameters.py
pff/soccer_rep/: batchify.py
pff/soccer_rep/CAE/: architecture.py
pff/soccer_rep/CVAE/: architecture.py
pff/visualize/: frame.py  pitch.py
pitch_control/: FastSpearmanPitchControl.ipynb  Player.cpp  Player.h  Player.pxd  cpitchcontrol.c  cpitchcontrol.pyx  ctransitionprobability.c  ctransitionprobability.pyx  cyplayer.cpp  cyplayer.pyx  execution.py  generaltasks.py  obso.py  parameters.py  pitchcontrol.py  player.py  setup.py  transitionprobability.py  xg.py
visualize/: frame.py  pitch.py
