[tool.poetry]
name = "salab-pff"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[tool.black]
target-version = ['py310']
experimental-string-processing = true

[tool.isort]
profile = "black"
src_paths = ["data_process", "pitch_control", "visualize"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
