[tool.poetry]
name = "salab-pff"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[tool.black]
line_length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
src_paths = ["data_process", "pitch_control", "visualize"]
line_length = 88
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
