[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.0"
cython = "^3.0.4"
d6tflow = "^0.2.6"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[tool.black]
line_length = 88
target-version = ['py310', 'py311']
preview = true

[tool.isort]
profile = "black"
src_paths = ["data_process", "pitch_control", "visualize"]
line_length = 88
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SALab-PFF"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
